<resources>
    <string name="app_name">Chat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="login_button_title">Iniciar sesion</string>
    <string name="register_button_title">Registrar</string>
    <string name="create_button_title">Crear Usuario</string>
    <string name="back_button_title">Volver</string>

    <string name="username_hint">Nombre de usuario</string>
    <string name="email_hint">Dirección email</string>
    <string name="password_hint">Contraseña</string>
    <string name="rep_password_hint">Repetir Contraseña</string>
    <string name="title_activity_add_room">AddRoomActivity</string>


</resources>
