<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@drawable/background">

    <EditText
        style="@style/edit_text_white_style"
        android:id="@+id/reg_username_et"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:hint="@string/username_hint" />

    <EditText
        style="@style/edit_text_white_style"
        android:id="@+id/reg_email_et"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>

    <EditText
        style="@style/edit_text_white_style"
        android:id="@+id/reg_password_et"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button
        style="@style/simple_button"
        android:id="@+id/reg_save_button"
        android:text="@string/create_button_title"
        android:onClick="registerButtonPressed"/>

</LinearLayout>
