<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bubble_chart_black"
            android:layout_margin="20dp"
            />

        <EditText
            style="@style/edit_text_white_style"
            android:id="@+id/username_et"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/username_hint" />

        <EditText
            style="@style/edit_text_white_style"
            android:id="@+id/password_et"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

        <Button
            style="@style/simple_button"
            android:id="@+id/login_button"
            android:text="@string/login_button_title"
            android:onClick="loginButtonPressed"
            android:layout_marginBottom="20dp"/>

        <Button
            style="@style/simple_button"
            android:id="@+id/register_button"
            android:text="@string/register_button_title"
            android:onClick="registerButtonPressed"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <include
        android:id="@+id/loading_layout"
        layout="@layout/loading_view">
    </include>

</FrameLayout>